syntax = "proto3";

package txn;

message Event {
  enum EventAction {
    PUT = 0;
    DELETE = 1;
  }
  EventAction action = 1;
  KeyValue kv = 2;
}

message KeyValue {
  bytes key = 1;
  int64 create_revision = 2;
  int64 mod_revision = 3;
  int64 version = 4;
  bytes value = 5;
}

message Message {
  enum MessageType {
    HEARTBEAT = 0;
    STATE = 1;
  }
  MessageType type = 1;
  KeyValue kv = 2;
}
